# automerge-graphviz

./: .gitignore  Cargo.toml  flake.nix
src/: lib.rs  main.rs
